dont drop video on broken input timeline / "resetting master sync"
I found while processing mpeg files with large timestamp jumps that vlc would drop large segments of video (until the audio matched the video). If the jump was severe, it would effectively truncate the file or (writing only audio) thoroughly confuse a player with the generated file.
This patch attempts to semi-gracefully correct for jumps in the input timecode while maintaining audio/video sync. I wrote it against 0.8.6c, but I think it still applies.
Supplied patch is short and ugly (hackish), needs review (probably does not meet coding standards), just "works for me".
may also fix ticket#775 (closed) (haven't tried)