Add vlc_init primitive. Closes #1953.